# ctemplate

./: .gitignore  CMakeLists.txt  build_clang.sh  readme.md
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_main.c
