CMAKE_MINIMUM_REQUIRED(VERSION 3.28.3)

PROJECT(ctemplate C)

SET(CMAKE_C_STANDARD 11)
set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER}" CACHE STRING "" FORCE)
set(CMAKE_CXX_COMPILER "${CMAKE_CXX_COMPILER}" CACHE STRING "" FORCE)
SET(CMAKE_BUILD_TYPE Debug)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ENABLE_TESTING()

add_subdirectory(src)
add_subdirectory(tests)
